--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body {
   font-family: "Roboto", sans-serif;
 }
 .title {
-  font-size: 20px;
+  font-size: 30px;
   color: #ffffff;
   margin-top: 25px;
   margin-bottom: 20px;
@@ -49,8 +49,10 @@ body {
 .hex-code-input {
   background-color: #fff;
   height: 30px;
+  width: 250px;
   margin: 10px 10px 20px;
-  font-size: 18px;
+  font-size: 17px;
+  text-indent: 5px;
   border: 1px solid #714593;
   outline: none;
 }
@@ -78,4 +80,62 @@ body {
 }
 .color-list li:hover {
   border: 2px solid #222222;
+}
+
+/* Layout Responsive */
+
+@media (max-width: 622px) {
+  .generator {
+    width: 500px;
+    padding: 10px;
+    min-height: 200px;
+    border-radius: 10px;
+  }
+  .hex-code-input {
+    font-size: 15px;
+  }
+  .palettes {
+    width: 380px;
+  }
+}
+@media (max-width: 412px) {
+  .title {
+    font-size: 25px;
+    line-height: 1.4;
+  }
+  .generator {
+    width: 400px;
+    min-height: 200px;
+    border-radius: 10px;
+  }
+  .hex-code-input {
+    font-size: 15px;
+  }
+  .palettes {
+    width: 280px;
+  }
+}
+@media (max-width: 352px) {
+  body {
+    background-color: #ffffff;
+  }
+  .title {
+    color: #222222;
+    font-size: 20px;
+    line-height: 1.4;
+    margin-bottom: 5px;
+  }
+  .generator {
+    margin-top: 5px;
+    width: 400px;
+    padding: 0;
+    min-height: 200px;
+    border-radius: 10px;
+  }
+  .hex-code-input {
+    font-size: 15px;
+  }
+  .palettes {
+    width: 280px;
+  }
 }
