--- a/css/style.css
+++ b/css/style.css
@@ -7,13 +7,13 @@
 }
 body {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #222222;
   font-family: "Roboto", sans-serif;
 }
 .title {
+  text-align: center;
   font-size: 30px;
   color: #ffffff;
   margin-top: 25px;
